--- a/app/src/main/res/layout/clothe_rv_item.xml
+++ b/app/src/main/res/layout/clothe_rv_item.xml
@@ -44,7 +44,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Price" />
+                tools:text="100" />
 
             <TextView
                 android:id="@+id/idTV_type_gender"
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="4dp"
-                tools:text="Jean | Female"
+                tools:text="Sweater | Female"
                 android:textColor="#8A000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/idITV_price"
@@ -65,7 +65,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="4dp"
                 android:ellipsize="end"
-                android:maxEms="11"
+                android:maxEms="9"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_15sp"
